single-cluster-k8s/cost-optimized-lb-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: b
spec:
  hosts:
    - b
  http:
    - route:
        - destination:
            host: b
            subset: v2
---
