single-cluster-k8s/request-routing-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: request-routing-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: illinois-request-routing
spec:
  hosts:
    - "*"
  gateways:
    - request-routing-gateway
  http:
    - match:
        - uri:
            exact: /callme
      route:
        - destination:
            host: a
            port:
              number: 9080
