single-cluster-k8s/round-robin-across-clusters.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: b
spec:
  hosts:
    - b
  http:
    - route:
        - destination:
            host: b
            subset: v1
          weight: 50
        - destination:
            host: b
            subset: v2
          weight: 50
---
